[package]
name = "sec10-wordcount"
version = "0.1.0"
authors = ["modeverv <modeverv@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description="シンプルな文字、単語、行の出現頻度の計数機能を提供します。"
readme="README.md"
repository="https://github.com/modeverv/Rust201911sec10WordCount"
categories=["commandlineutilities"]
keywords=["example","frequency","text"]

[dependencies]
regex = "1.0"
